# llm-clip

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-06-17-llm-clip.md
docs/superpowers/specs/: 2026-06-17-llm-clip-design.md
scripts/: smoke.sh
src/llm_clip/: __init__.py  cli.py  clipboard.py  errors.py  images.py  select.py
tests/: test_cli.py  test_clipboard.py  test_errors.py  test_images.py  test_select.py
