[project]
name = "llm-clip"
version = "0.1.0"
description = "Feed the clipboard to Simon Willison's llm as an attachment"
requires-python = ">=3.10"
license = "AGPL-3.0-or-later"
dependencies = [
    "pillow",
    "pyobjc-framework-Cocoa; sys_platform == 'darwin'",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
llm-clip = "llm_clip.cli:main"

[build-system]
requires = ["uv_build>=0.9.6,<0.14"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
